<resources>
    <string name="app_name">FirebasePushNotification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_emergency_alert_system">Welcome to Emergency Alert System</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_my_account">Login to my Account</string>
    <string name="need_a_new_account">Need a new Account ?</string>
    <string name="profile">Profile</string>
    <string name="all_users">All Users</string>
    <string name="notifications">Notifications</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="name">Name</string>
    <string name="back_to_login">Back to Login</string>
    <string name="logout_this_account">Logout this Account</string>
    <string name="loading_name">Loading Name</string>
    <string name="default_notification_channel_id">Hamza_01</string>
</resources>
