<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/blue">

    <LinearLayout
        android:id="@+id/tabs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/profileLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="1dp"
            android:text="@string/profile"
            android:textColor="@color/textTabBright"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="1dp"
            android:text="@string/all_users"
            android:textColor="@color/textTabBright"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/notificationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="1dp"
            android:text="@string/notifications"
            android:textColor="@color/textTabBright"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mainPager"
        android:layout_below="@id/tabs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>