<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/blue">

    <TextView
        android:id="@+id/registerHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_progress_bar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="50dp"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="@color/textTabBright"
        android:textSize="22sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_image_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/registerHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:src="@drawable/default_profile_image"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_image_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:textSize="16sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:textSize="16sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:textSize="16sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_background"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:text="@string/create_a_new_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/register_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_btn"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/border_button"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:text="@string/back_to_login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:indeterminate="true"
        android:visibility="invisible" />


</RelativeLayout>